--- a/package.json
+++ b/package.json
@@ -9,7 +9,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.21.0",
+    "bcrypt": "^5.0.0",
+    "concurrently": "^5.3.0",
+    "cors": "^2.8.5",
+    "create-react-app": "^4.0.0",
+    "cross-env": "^7.0.2",
     "express": "^4.17.1",
+    "express-async-error": "^0.0.2",
+    "express-async-errors": "^3.1.1",
+    "express-http-proxy": "^1.6.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.10.11",
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-addons-css-transition-group": "^15.6.2",
@@ -20,12 +31,18 @@
     "react-syntax-highlighter": "^15.2.1",
     "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
+    "redux-form": "^8.3.6",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "production": "cross-env NODE_ENV=production node server.js",
+    "server": "nodemon server.js",
+    "dev": "concurrently \"npm run server\" \"npm run start\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -33,6 +50,7 @@
     "extends": "react-app",
     "plugin": "react-hooks/recommended"
   },
+  "proxy": "http://localhost:5000",
   "browserslist": {
     "production": [
       ">0.2%",
